--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <meta name="description" content="">
 	<title>HKEdcity exercises</title>
+	<meta http-equiv="cache-control" content="max-age=0" />
+	<meta http-equiv="cache-control" content="no-cache" />
+	<meta http-equiv="expires" content="0" />
+	<meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
+	<meta http-equiv="pragma" content="no-cache" />
 	<link rel="stylesheet" href="vendor/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="vendor/fontawesome/css/font-awesome.css">
 	<link rel="stylesheet" href="vendor/owl.carousel/owl.carousel.css">
@@ -57,8 +62,8 @@
 	</div>
 	<script id="layout-1-template" type="x-template">
 	<div class="actions actions--exercise">
-		<div class="button button--exercise small" v-on="click: reset(currentQuestion)"><i class="fa fa-refresh"></i> 重設</div>
-		<div class="button button--exercise" v-on="click: showAnswer(currentQuestion)"><i class="fa fa-search"></i> 正確答案</div>
+		<div class="button button--exercise small" v-on="click: reset(questions)"><i class="fa fa-refresh"></i> 重設</div>
+		<div class="button button--exercise" v-on="click: showAnswer(questions)"><i class="fa fa-search"></i> 正確答案</div>
 	</div>
 	<div class="owl-carousel">
 		<div class="layout-1" v-repeat="question: questions">
@@ -83,7 +88,10 @@
 	</div>
 	<div class="owl-carousel">
 		<div class="layout-2" v-repeat="question: questions">
-			<h1 class="exercise__question">{{question.index+1}}. {{question.questionText}} <i class="fa fa-check-circle" v-show="question.correct"></i></h1>
+			<h1 class="exercise__question">
+				{{question.index+1}}. {{question.questionText}}
+				<i class="fa " v-class="fa-check-circle:question.correct, fa-times-circle:question.wrong"></i>
+			</h1>
 			<div class="exercise__answer-list-outer">
 				<ol class="exercise__answer-list">
 					<li class="exercise__answer" v-repeat="answer: question.answers" v-class="is-correct-answer: answer.correct">
@@ -95,7 +103,6 @@
 					</li>
 				</ol>
 			</div>
-			<div class="exercise__wrong-notification" v-show="question.wrong">答錯了，請再選擇。</div>
 		</div>
 	</div>
 	</script>
@@ -108,7 +115,10 @@
 	</div>
 	<div class="owl-carousel">
 		<div class="layout-3" v-repeat="question: questions">
-			<h1 class="exercise__question">{{question.index+1}}. {{question.questionText}} <i class="fa fa-check-circle" v-show="question.correct"></i></h1>
+			<h1 class="exercise__question">
+				{{question.index+1}}. {{question.questionText}}
+				<i class="fa " v-class="fa-check-circle:question.correct, fa-times-circle:question.wrong"></i>
+			</h1>
 			<div class="exercise__answer-list-outer">
 				<ol class="exercise__answer-list">
 					<li class="exercise__answer" v-repeat="answer: question.answers" v-class="is-correct-answer: answer.correct">
@@ -121,7 +131,6 @@
 					</li>
 				</ol>
 			</div>
-			<div class="exercise__wrong-notification" v-show="question.wrong">答錯了，請再選擇。</div>
 		</div>
 	</div>
 	</script>
