--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <script id="layout-1-template" type="x-template">
 	<div class="owl-carousel">
 		<div v-repeat="question: questions">
-			<h1 class="exercise__question">{{question.index+1}}. {{question.questionText}} </h1>
+			<h1 class="exercise__question exercise__question-number">{{question.index+1}}. {{question.questionText}} </h1>
 			<div class="exercise__answer-list-outer" v-class="answer-checked: isAnswerChecked">
 				<ol class="exercise__answer-list">
 					<li class="exercise__answer" v-repeat="answer: question.answers" v-class="is-correct-answer: answer.correct, is-selected: answer.selected">
@@ -87,14 +87,14 @@
 <script id="layout-2-template" type="x-template">
 	<div class="owl-carousel">
 		<div v-repeat="question: questions">
-			<h1 class="exercise__question">
+			<h1 class="exercise__question exercise__question-number">
 				{{question.index+1}}. {{question.questionText}}
 				<i class="fa " v-class="fa-check-circle:question.correct, fa-times-circle:question.wrong"></i>
 			</h1>
 			<div class="exercise__answer-list-outer">
 				<ol class="exercise__answer-list">
-					<li class="exercise__answer" v-repeat="answer: question.answers" v-class="is-correct-answer: answer.correct, is-selected: answer.selected">
-						<span class="exercise__answer-text" v-on="click: chooseAnswer(question, answer)">
+					<li class="exercise__answer" v-repeat="answer: question.answers" v-class="is-correct-answer: answer.correct, is-selected: answer.selected" v-on="click: chooseAnswer(question, answer)">
+						<span class="exercise__answer-text">
 							<i class="fa " v-class="
 								fa-square-o: !answer.selected,
 								fa-check-square: answer.selected
@@ -111,14 +111,14 @@
 <script id="layout-3-template" type="x-template">
 	<div class="owl-carousel">
 		<div v-repeat="question: questions">
-			<h1 class="exercise__question">
+			<h1 class="exercise__question exercise__question-number">
 				{{question.index+1}}. {{question.questionText}}
 				<i class="fa " v-class="fa-check-circle:question.correct, fa-times-circle:question.wrong"></i>
 			</h1>
 			<div class="exercise__answer-list-outer">
 				<ol class="exercise__answer-list">
-					<li class="exercise__answer" v-repeat="answer: question.answers" v-class="is-correct-answer: answer.correct, is-selected: answer.selected">
-						<div class="exercise__answer-text" v-on="click: chooseAnswer(question, answer)">
+					<li class="exercise__answer" v-repeat="answer: question.answers" v-class="is-correct-answer: answer.correct, is-selected: answer.selected" v-on="click: chooseAnswer(question, answer)">
+						<div class="exercise__answer-text">
 							<div class="exercise__answer-text-inner">
 								<img class="exercise__answer-image" v-attr="src: imagePath + (question.index + 1) + '-' + ($index + 1) +'.png'" alt="">
 								<i class="fa " v-class="
@@ -152,8 +152,8 @@
 			</div>
 			<div class="exercise__answer-list-outer">
 				<ol class="exercise__answer-list">
-					<li class="exercise__answer" v-repeat="answer: question.answers" v-class="is-correct-answer: answer.correct, is-selected: answer.selected">
-						<div class="exercise__answer-text" v-on="click: chooseAnswer(question, answer, question.answers)">
+					<li class="exercise__answer" v-repeat="answer: question.answers" v-class="is-correct-answer: answer.correct, is-selected: answer.selected" v-on="click: chooseAnswer(question, answer, question.answers)">
+						<div class="exercise__answer-text">
 							<i class="fa" 
 							v-class="
 							fa-check-square: $index == 0,
@@ -184,11 +184,13 @@
 			</div>
 			<div class="exercise__answer-list-outer col-xs-6">
 				<ol class="exercise__answer-list">
-					<li class="exercise__answer" v-repeat="answer: question.answers" v-class="is-correct-answer: answer.correct, is-selected: answer.selected">
-						<div class="exercise__answer-text" v-on="click: chooseAnswer(question, answer, question.answers)">
+					<li class="exercise__answer" v-repeat="answer: question.answers" v-class="is-correct-answer: answer.correct, is-selected: answer.selected" v-on="click: chooseAnswer(question, answer, question.answers)">
+						<div class="exercise__answer-text">
 							<div class="exercise__answer-text-inner">
-								<i class="fa fa-square-o" v-show="!answer.selected"></i>
-								<i class="fa fa-check-square" v-show="answer.selected"></i>
+								<i class="fa " v-class="
+									fa-square-o: !answer.selected,
+									fa-check-square: answer.selected
+								"></i>
 								{{ answer.text }}
 							</div>
 						</div>
@@ -216,8 +218,8 @@
 				</div>
 				<div class="exercise__answer-list-outer col-xs-2 qtype__tof">
 					<ol class="exercise__answer-list">
-						<li class="exercise__answer" v-repeat="answer: question.answers | filterBy 'tof'" v-class="is-correct-answer: answer.correct, is-selected: answer.selected">
-							<div class="exercise__answer-text" v-on="click: chooseSingleAnswer(question, answer, question.answers, 'tof')">
+						<li class="exercise__answer" v-repeat="answer: question.answers | filterBy 'tof'" v-class="is-correct-answer: answer.correct, is-selected: answer.selected" v-on="click: chooseSingleAnswer(question, answer, question.answers, 'tof')">
+							<div class="exercise__answer-text">
 								<div class="exercise__answer-text-inner">
 									<i class="fa" v-class="
 										fa-check-square: $index == 0,
@@ -245,6 +247,71 @@
 							</div>
 						</li>
 					</ol>
+				</div>
+			</div>
+		</div>
+	</div>
+</script>
+<script id="layout-7-template" type="x-template">
+	<div class="owl-carousel">
+		<div v-repeat="question: questions">
+			<div class="exercise__question-number">
+				{{question.index+1}}. {{question.text}}
+				<i class="fa" v-class="fa-check-circle:question.correct, fa-times-circle:question.wrong"></i>
+			</div>
+			<div class="exercise__question row">
+				<div class="col-xs-6" v-repeat="2">
+					<div class="exercise__question-content">
+						<div class="exercise__question-video">
+							Video Here
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="exercise__answer-list-outer">
+				<ol class="exercise__answer-list">
+					<li class="exercise__answer" v-repeat="answer: question.answers" v-class="is-correct-answer: answer.correct, is-selected: answer.selected" v-on="click: chooseAnswer(question, answer, question.answers)">
+						<div class="exercise__answer-text">
+							<i class="fa" 
+							v-class="
+							fa-check-square: $index == 0,
+							fa-times-circle: $index == 1,
+							selected: answer.selected
+							"></i>
+						</div>
+					</li>
+				</ol>
+			</div>
+		</div>
+	</div>
+</script>
+
+<!-- Drag and Drop -->
+<script id="layout-8-template" type="x-template">
+	<div class="owl-carousel">
+		<div v-repeat="question: questions">
+			<h1 class="exercise__question exercise__question-number ">
+				{{question.index+1}}. {{question.questionText}}
+				<i class="fa " v-class="fa-check-circle:question.correct, fa-times-circle:question.wrong"></i>
+			</h1>
+			<div class="row">
+				<div class="col-xs-6">
+					<div class="exercise__answer-list-outer">
+						<ol class="exercise__answer-list">
+							<li class="exercise__answer" v-repeat="answer: question.answers" v-class="is-correct-answer: answer.correct, is-selected: answer.selected" v-on="click: chooseAnswer(question, answer)">
+								<span class="exercise__answer-text">
+									<i class="fa " v-class="
+										fa-square-o: !answer.selected,
+										fa-check-square: answer.selected
+									"></i>
+									{{ answer.text }}
+								</span>
+							</li>
+						</ol>
+					</div>
+				</div>
+				<div class="col-xs-6">
+					<div id="dropzone" class="dropzone"></div>
 				</div>
 			</div>
 		</div>
