--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="vendor/fontawesome/css/font-awesome.css">
 	<link rel="stylesheet" href="vendor/owl.carousel/owl.carousel.css">
 	<link rel="stylesheet" href="vendor/owl.carousel/owl.theme.default.css">
+	<link rel="stylesheet" href="vendor/dragula/dragula.min.css">
 	<link rel="stylesheet" href="css/main.css">
 	<script src="js/vue.js"></script>
 	<script src="vendor/jquery.min.js"></script>
@@ -297,7 +298,7 @@
 			<div class="row">
 				<div class="col-xs-6">
 					<div class="exercise__answer-list-outer">
-						<ol class="exercise__answer-list">
+						<ol id="dragzone" class="exercise__answer-list">
 							<li class="exercise__answer" v-repeat="answer: question.answers" v-class="is-correct-answer: answer.correct, is-selected: answer.selected" v-on="click: chooseAnswer(question, answer)">
 								<span class="exercise__answer-text">
 									<i class="fa " v-class="
@@ -319,6 +320,7 @@
 </script>
 	
 	<script src="vendor/owl.carousel/owl.carousel.js"></script>
+	<script src="vendor/dragula/dragula.min.js"></script>
 	<script src="js/book.js"></script>
 	<script src="js/validatemethods.js"></script>
 	<script src="js/app.js"></script>
