--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<script src="js/vue.js"></script>
 	<script src="vendor/jquery.min.js"></script>
 	<script src="vendor/bootstrap/bootstrap.js"></script>
+	<script src="vendor/lodash.min.js"></script>
 	<script src="vendor/director.min.js"></script>
 </head>
 <body>
@@ -38,7 +39,7 @@
 						<div id="score-board" class="score-board">
 							<div class="score-board__title">分數</div>
 							<div class="score">
-								{{totalNumOfCorrect}} / {{totalNumOfQuestion}}
+								{{studentScore}} / {{baseScore}}
 							</div>
 						</div>
 					</div>
