✔ 麻煩將所有標點，如逗號、冒號、問號 變做全形。 @done (15-08-04 22:22)  ✔ 計分時，以每個答案為一分，不是以每頁為一分。(如果同一題可選多過一個答案，就計每個對的答案為一分) @done (15-08-04 23:42)  ✔ 核對答案時，顯示答對了和答錯了不要用剔和交叉，因為有時會和選項相似，顯得混亂。請改為答對了用笑臉J，答錯了用不開心臉 L  (請看附件的smile_sad_button.ai   顏色用返你現在用那種就OK ) @done (15-08-05 22:53)  ✔ 核對答案時，不用在題號後加上剔或交叉 @done (15-08-05 22:59)  ✔ 在提交答案核對後，請不要再讓人改答案。直至重設後才可再選。  @done (15-08-05 23:59)  ✔ 在核對答案後，應該在任何一頁都可按「正確答案」，不只是最後一頁。 @done (15-08-06 00:02)  ✔ 正確答案的BUTTON 底色請變做黃色 (跟分數框一樣色，可參考附件的INTERFACE) @done (15-08-06 00:43)  ✔ Ex 1-1      只限這款練習。選了答案，如果答錯，要顯示「L 答錯了，請再選擇。」 @done (15-08-06 00:51)  ✔ Ex 1-1      只限這款練習。不用出「正確答案」的BUTTON @done (15-08-06 00:52)  ✔ Ex 1-3      第二頁，在問題下請加一句：（可選擇多於一個答案） @done (15-08-06 00:55)

--- a/index.html
+++ b/index.html
@@ -65,9 +65,15 @@
 	</div>
 <script id="actions-template" type="x-template">
 <div class="actions actions--exercise">
-	<div class="button button--exercise small reset-button" v-on="click: reset"><i class="fa fa-refresh"></i> 重設</div>
-	<div class="button button--exercise check-answer-button" v-on="click: checkAnswer"><i class="fa fa-check"></i> 提交答案</div>
-	<div class="button button--exercise show-answer-button" v-show="isAnswerChecked" v-on="click: showAnswer"><i class="fa fa-search"></i> 正確答案</div>
+	<div class="button button--exercise small reset-button" v-on="click: reset">
+		<div class="button-inner"><i class="fa fa-refresh"></i> 重設</div>
+	</div>
+	<div class="button button--exercise check-answer-button" v-on="click: checkAnswer">
+		<div class="button-inner"><i class="fa fa-check"></i> 提交答案</div>
+	</div>
+	<div class="button button--exercise show-answer-button" v-show="isAnswerChecked" v-on="click: showAnswer">
+		<div class="button-inner"><i class="fa fa-search"></i> 正確答案</div>
+	</div>
 </div>
 </script>
 
@@ -93,6 +99,7 @@
 				{{question.index+1}}. {{question.questionText}}
 				<i class="fa " v-class="fa-check-circle:question.correct, fa-times-circle:question.wrong"></i>
 			</h1>
+			<p>{{question.questionText2}}</p>
 			<div class="exercise__answer-list-outer">
 				<ol class="exercise__answer-list">
 					<li class="exercise__answer" v-repeat="answer: question.answers" v-class="is-correct-answer: answer.correct, is-selected: answer.selected" v-on="click: chooseAnswer(question, answer)">
