--- a/index.html
+++ b/index.html
@@ -269,9 +269,10 @@
 		</div>
 	</div>
 </script>
+
 <script id="layout-7-template" type="x-template">
 	<div class="owl-carousel">
-		<div v-repeat="question: questions">
+		<div v-repeat="question: questions" v-class="is-wrong: question.wrong">
 			<div class="exercise__question-number">
 				{{question.index+1}}. {{question.text}}
 				<i class="fa" v-class="fa-check-circle:question.correct, fa-times-circle:question.wrong"></i>
@@ -287,7 +288,7 @@
 			</div>
 			<div class="exercise__answer-list-outer">
 				<ol class="exercise__answer-list">
-					<li class="exercise__answer" v-repeat="answer: question.answers" v-class="is-correct-answer: answer.correct, is-selected: answer.selected" v-on="click: chooseAnswer(question, answer, question.answers)">
+					<li class="exercise__answer col-xs-6" v-repeat="answer: question.answers" v-class="is-correct-answer: answer.correct, is-selected: answer.selected" v-on="click: chooseAnswer(question, answer, question.answers)">
 						<div class="exercise__answer-text">
 							<i class="fa" 
 							v-class="
