--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@
 	<script src="vendor/dragula/dragula.min.js"></script>
 	<script src="js/book.js"></script>
 	<script src="js/validatemethods.js"></script>
+	<script src="js/dragndropmethods.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
