--- a/index.html
+++ b/index.html
@@ -304,7 +304,8 @@
 	</div>
 </script>
 
-<!-- Drag and Drop -->
+<!-- *** Drag and Drop *** -->
+<!-- Drag and Drop: One Left Drag - One Right Drop -->
 <script id="layout-8-template" type="x-template">
 	<div class="owl-carousel">
 		<div class="question" v-repeat="question: questions">
@@ -315,8 +316,8 @@
 			<div class="row">
 				<div class="col-xs-6">
 					<div class="exercise__answer-list-outer">
-						<ol id="dragzone" class="dragzone exercise__answer-list">
-							<li class="exercise__answer" v-repeat="answer: question.answers" v-class="is-correct-answer: answer.correct, is-selected: answer.selected" v-on="click: chooseAnswer(question, answer)">
+						<ol id="dragzone-{{$index}}" v-repeat="dragPool: question.dragPools" class="dragzone exercise__answer-list type-{{dragPool.type}}">
+							<li class="exercise__answer  type-{{answer.type}}" v-repeat="answer: question.answers" v-class="is-correct-answer: answer.correct, is-selected: answer.selected">
 								<span class="exercise__answer-text">
 									{{ answer.text }}
 								</span>
@@ -325,7 +326,7 @@
 					</div>
 				</div>
 				<div class="col-xs-6">
-					<ol id="dropzone" class="dropzone exercise__answer-list">
+					<ol id="dropzone-{{$index}}" v-repeat="dropPool: question.dropPools" class="dropzone exercise__answer-list type-{{dropPool.type}}" v-attr="data-text: dropPool.text">
 					</ol>
 				</div>
 			</div>
@@ -333,6 +334,7 @@
 	</div>
 </script>
 
+<!-- Drag and Drop: Multiple Left Drag - Multiple Right Drop -->
 <script id="layout-9-template" type="x-template">
 	<div class="owl-carousel">
 		<div class="question" v-repeat="question: questions">
@@ -358,6 +360,100 @@
 				</div>
 				<div class="col-xs-6">
 					<ol id="dropzone-{{$index}}" v-repeat="dropPool: question.dropPools" class="dropzone exercise__answer-list type-{{dropPool.type}}" v-attr="data-text: dropPool.text">
+					</ol>
+				</div>
+			</div>
+		</div>
+	</div>
+</script>
+
+<!-- Drag and Drop: Top Drag with images - Bottom Drop -->
+<script id="layout-10-template" type="x-template">
+	<div class="owl-carousel">
+		<div class="question" v-repeat="question: questions">
+			<h1 class="exercise__question exercise__question-number">
+				{{question.index+1}}. {{question.questionText}}
+				<i class="fa " v-class="fa-check-circle:question.correct, fa-times-circle:question.wrong"></i>
+			</h1>
+			<div class="exercise__answer-list-outer">
+				<div class="dragzones-outer">
+					<ol id="dragzone-{{$index}}" v-repeat="dragPool: question.dragPools" class="dragzone exercise__answer-list type-{{dragPool.type}}">
+						<li class="exercise__answer type-{{answer.type}}" v-repeat="answer: question.answers"
+							v-class="
+								is-correct-answer: answer.correct,
+								is-selected: answer.selected
+							" v-on="click: chooseAnswer(question, answer)">
+							<img class="exercise__answer-image" v-attr="src: imagePath + (question.index + 1) + '-' + ($index + 1) +'.png'" alt="">
+							<span class="exercise__answer-text">
+								{{ answer.text }}
+							</span>
+						</li>
+					</ol>
+				</div>
+				<div class="dropzones-outer">
+					<ol id="dropzone-{{$index}}" v-repeat="dropPool: question.dropPools" class="dropzone exercise__answer-list type-{{dropPool.type}}" v-attr="data-text: dropPool.text">
+					</ol>
+				</div>
+			</div>
+		</div>
+	</div>
+</script>
+
+<!-- Drag and Drop: Top Drag - Bottom Drop -->
+<script id="layout-11-template" type="x-template">
+	<div class="owl-carousel">
+		<div class="question" v-repeat="question: questions">
+			<h1 class="exercise__question exercise__question-number">
+				{{question.index+1}}. {{question.questionText}}
+				<i class="fa " v-class="fa-check-circle:question.correct, fa-times-circle:question.wrong"></i>
+			</h1>
+			<div class="exercise__answer-list-outer">
+				<div class="dragzones-outer">
+					<ol id="dragzone-{{$index}}" v-repeat="dragPool: question.dragPools" class="dragzone exercise__answer-list type-{{dragPool.type}}">
+						<li class="exercise__answer type-{{answer.type}}" v-repeat="answer: question.answers"
+							v-class="
+								is-correct-answer: answer.correct,
+								is-selected: answer.selected
+							" v-on="click: chooseAnswer(question, answer)">
+							<span class="exercise__answer-text">
+								{{ answer.text }}
+							</span>
+						</li>
+					</ol>
+				</div>
+				<div class="dropzones-outer">
+					<ol id="dropzone-{{$index}}" v-repeat="dropPool: question.dropPools" class="dropzone exercise__answer-list type-{{dropPool.type}}" v-attr="data-text: dropPool.text">
+					</ol>
+				</div>
+			</div>
+		</div>
+	</div>
+</script>
+
+<!-- Drag and Drop: Top Drag - Bottom Drop -->
+<script id="layout-12-template" type="x-template">
+	<div class="owl-carousel">
+		<div class="question" v-repeat="question: questions">
+			<h1 class="exercise__question exercise__question-number">
+				{{question.index+1}}. {{question.questionText}}
+				<i class="fa " v-class="fa-check-circle:question.correct, fa-times-circle:question.wrong"></i>
+			</h1>
+			<div class="exercise__answer-list-outer">
+				<div class="dragzones-outer">
+					<ol id="dragzone-{{$index}}" v-repeat="dragPool: question.dragPools" class="dragzone exercise__answer-list type-{{dragPool.type}}">
+						<li class="exercise__answer type-{{answer.type}}" v-repeat="answer: question.answers"
+							v-class="
+								is-correct-answer: answer.correct,
+								is-selected: answer.selected
+							" v-on="click: chooseAnswer(question, answer)">
+							<span class="exercise__answer-text">
+								{{ answer.text }}
+							</span>
+						</li>
+					</ol>
+				</div>
+				<div class="dropzones-outer">
+					<ol id="dropzone-{{$index}}" v-repeat="dropPool: question.dropPools" class="dropzone exercise__answer-list type-{{dropPool.type}}" v-attr="data-text: dropPool.text, data-correct: dropPool.correctCount">
 					</ol>
 				</div>
 			</div>
